--- a/style.css
+++ b/style.css
@@ -1010,7 +1010,8 @@ hr{
     font-weight: bold;
     font-size: auto;
 }
-#footer .title-text{
+#footer .title-text p, 
+h1{
     padding-bottom: 20px;
 }
 .wrapper a{
